[package]
name = "log4rs_test_utils"
version = "0.1.0"
authors = ["Chris Riches"]
edition = "2021"
description = "Utilities for testing log4rs-based logging, for both internal components and end users"
readme = "README.md"
repository = "https://github.com/cjriches/log4rs_test_utils"
license = "MIT OR Apache-2.0"

[dependencies.anyhow]
version = "1.0.65"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.log]
version = "0.4.17"

[dependencies.log4rs]
version = "1.1.1"
