[package]
name = "log4rs_test_utils"
version = "0.2.1"
authors = ["Chris Riches"]
edition = "2021"
description = "Utilities for testing log4rs-based logging, whether you want to log your tests or test your logs."
readme = "README.md"
repository = "https://github.com/cjriches/log4rs_test_utils"
license = "MIT OR Apache-2.0"
keywords = ["log", "logging", "log4rs", "test"]

[features]
default = ["log_testing", "test_logging"]
log_testing = ["lazy_static"]
test_logging = []

[dependencies.anyhow]
version = "1.0.65"

[dependencies.lazy_static]
version = "1.4.0"
optional = true

[dependencies.log]
version = "0.4.17"

[dependencies.log4rs]
version = "1.1.1"
default-features = false
features = ["pattern_encoder"]
